# VideoSalientCpp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  saliency.code-workspace
opencv/: Dockerfile  build_opencv.bat  docker-compose.yml
saliency/share/: parameters.yml
scripts/: build_opencv_gcc.bat
source/: capture.h  channel_color.h  channel_flicker.h  channel_opticalflow.h  channel_orientation.h  command_line.h  cv_tools.h  data_structures.h  image_tools.h  parameters.h  postprocessing.h  preprocessing.h  program.h  saliency.h  saliency_map.h  shared_objects.h  timing.h  tools.h
tests/: highgui_test.cpp  write_default_params.cpp
